k8s/matching-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-svc
  labels:
    type: backend
    app: matching-svc
spec:
  selector:
    matchLabels:
      type: backend
      app: matching-svc
  template:
    metadata:
      name: matching-svc
      labels:
        type: backend
        app: matching-svc
    spec:
      containers:
        - name: matching-svc
          image: asia-southeast1-docker.pkg.dev/cs3219-g11-peerprep/cs3219-g11-repo/matching-svc:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      dnsPolicy: ClusterFirst
---
# This is an internal service, not exposed
apiVersion: v1
kind: Service
metadata:
  name: matching-svc
spec:
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    type: backend
    app: matching-svc
