k8s/session-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-svc
  labels:
    app: session-svc
spec:
  selector:
    matchLabels:
      app: session-svc
  template:
    metadata:
      name: session-svc
      labels:
        app: session-svc
    spec:
      containers:
        - name: session-svc
          image: asia-southeast1-docker.pkg.dev/cs3219-g11-peerprep/cs3219-g11-repo/session-svc:latest
          imagePullPolicy: Always
          livenessProbe:  # Add this block for liveness probe
            httpGet:
              path: /
              port: 4444
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:  # Add this block for readiness probe
            httpGet:
              path: /
              port: 4444
            initialDelaySeconds: 5
            periodSeconds: 5
          # Add additional liveness probe for port 5555
          livenessProbe:
            httpGet:
              path: /
              port: 5555
            initialDelaySeconds: 10
            periodSeconds: 10
          # Add additional readiness probe for port 5555
          readinessProbe:
            httpGet:
              path: /
              port: 5555
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 4444
            - containerPort: 5555
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      dnsPolicy: ClusterFirst
---
# This is an internal service, not exposed
apiVersion: v1
kind: Service
metadata:
  name: session-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: LoadBalancer
  ports:
    - name: port-4444
      port: 4444
      targetPort: 4444
    - name: port-5555
      port: 5555
      targetPort: 5555
  selector:
    app: session-svc
