k8s/user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-svc
  labels:
    type: backend
    app: user-svc
spec:
  selector:
    matchLabels:
      type: backend
      app: user-svc
  template:
    metadata:
      name: user-svc
      labels:
        type: backend
        app: user-svc
    spec:
      containers:
        - name: user-svc
          image: asia-southeast1-docker.pkg.dev/cs3219-g11-peerprep/cs3219-g11-repo/user-svc:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  type: LoadBalancer
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    type: backend
    app: user-svc
